<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fit Journey</string>
    <string name="exercise">Exercise</string>
    <string name="enter_an_exercise">Enter an exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_a_weight">Enter a weight</string>
    <string name="enter_reps">Enter reps</string>
    <string name="reps">Reps</string>
    <string name="log">Log!</string>
    <string name="delete_user_admin">Delete User/Admin</string>
    <string name="display_users">Display Users</string>
    <string name="user_admin">User/Admin</string>
    <string name="delete_User_admin">Delete User/Admin</string>
    <string name="user_">User/Admin</string>
    <string name="delete">Delete</string>
    <string name="add_admin">Add Admin</string>
    <string name="display_user">Display Users</string>
    <string name="new_admin">New Admin</string>
    <string name="new_admin_user">New Admin</string>
    <string name="new_admin_users">New Admin User</string>
    <string name="new_admin_password">New Admin Password</string>
    <string name="create_new_admin">Create New Admin</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="user_admins">User/Admin</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password:</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="appHome">Home</string>
    <string name="change">Change</string>
    <!-- Added strings -->
    <string name="admin_page">Admin Page</string>
    <string name="hello_adminname">Hello Admin</string>
    <string name="delete_user">Delete User</string>
    <string name="add_a_admin">Add Admin</string>
    <string name="delete_a_user">Delete User</string>
    <string name="add_a_admin_user">Add Admin User</string>
    <string name="go_back_home">Go Back Home</string>
    <string name="fit_journey">Fit Journey</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="welcome_nfit_journey">Welcome to Fit Journey</string>
    <string name="hello_user_admin">Hello User Admin</string>
    <string name="meals">Meals</string>
    <string name="exercise_s">Exercises</string>
    <string name="admin">Admin</string>
    <string name="hello_user_name_or_hello_admin_name">Hello \'user + name\' or Hello \'Admin + name\'</string>
    <string name="display_past_meals_here">Display past meals here</string>
    <string name="enter_meal">Enter Meal</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="submit">Submit</string>
    <string name="add_a_new_admin">Add a New Admin:</string>
    <string name="new_admin_hint">new admin hint</string>
    <string name="add_new_password">Add New Password:</string>
    <string name="password_for_Create_Account">Password:</string>
    <string name="enter_username_for_create_account">Enter Username</string>
    <string name="create_account_for_create_account">Create Account</string>
    <string name="username_for_create_account">Username:</string>
    <string name="enter_an_admin_to_delete_at_delete_user_or_admin">enter an admin to delete</string>
    <string name="enter_a_user_or_admin_to_delete">enter a user or admin to delete</string>
    <string name="exercises">Exercises</string>
    <string name="display_past_exercises_here">Display past exercises here</string>
    <string name="enter_exercise">Enter Exercise</string>
    <string name="enter_duration_minutes">Enter Duration (minutes)</string>
    <string name="progress">Progress</string>
    <string name="displays_progress_n_here">Displays Progress\n here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="enter_usernames">Enter username</string>
    <string name="usernames">Username:</string>
    <string name="preference_file_key">daclinkPreferenceKeyFileFitJourney</string>
    <string name="preference_userId_key">daclinkPreferenceUserIdKeyFitJourney</string>
    <string name="cancel_">Cancel</string>
</resources>
