<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/admin_page_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/admin_page"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/displayAdminName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hello_adminname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_page_textView" />

    <Button
        android:id="@+id/deleteUser_button"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="68dp"
        android:text="@string/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAdminName_textView" />

    <Button
        android:id="@+id/addAdmin_button"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:text="@string/add_a_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteUser_button" />

    <Button
        android:id="@+id/adminHome_button"
        android:layout_width="126dp"
        android:layout_height="70dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAdmin_button" />

    <TextView
        android:id="@+id/adminPageDeleteUser_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/delete_a_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/deleteUser_button"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adminPageAddAdmin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/add_a_admin_user"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/addAdmin_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPageDeleteUser_textView" />


    <TextView
        android:id="@+id/adminPageHome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:text="@string/go_back_home"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/adminHome_button"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPageAddAdmin_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>