<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_nfit_journey"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/displayAdminName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/hello_user_name_or_hello_admin_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_textView" />

    <Button
        android:id="@+id/progress_button"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:text="@string/progress"
        app:layout_constraintBottom_toTopOf="@+id/meals_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAdminName_textView" />

    <Button
        android:id="@+id/meals_button"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginBottom="92dp"
        android:text="@string/meals"
        app:layout_constraintBottom_toTopOf="@+id/admin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/exercises_button"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="84dp"
        android:text="@string/exercise_s"
        app:layout_constraintBottom_toTopOf="@+id/admin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/meals_button" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginBottom="100dp"
        android:text="@string/admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:text="@string/settings"
        app:layout_constraintBaseline_toBaselineOf="@+id/progress_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/progress_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
