<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/username_textView2"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/username_editText"
        app:layout_constraintEnd_toStartOf="@+id/username_editText"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_textView"
        android:layout_width="308dp"
        android:layout_height="52dp"
        android:text="@string/fit_journey"
        android:textSize="45sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginBottom="272dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/creatNewAccount_button" />

    <Button
        android:id="@+id/creatNewAccount_button"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:text="@string/new_user"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_editText" />

    <EditText
        android:id="@+id/username_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_username"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/passord_textView"
        android:layout_width="114dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:gravity="center"
        android:text="@string/password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/password_editText"
        app:layout_constraintEnd_toStartOf="@+id/password_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>