<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteUserAdminActivity">

    <TextView
        android:id="@+id/addAdmin"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:text="@string/add_admin"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/newAdminLabelTextView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:autofillHints="username"
        android:gravity="center"
        android:hint="@string/new_admin"
        android:inputType="text"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAdmin" />

    <EditText
        android:id="@+id/newAdminPasswordLabelTextView"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:gravity="center"
        android:hint="@string/new_admin_password"
        android:inputType="textPassword"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAdminLabelTextView" />

    <Button
        android:id="@+id/createNewAdminButton"
        android:layout_width="144dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_new_admin"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newAdminPasswordLabelTextView" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewAdminButton" />

    <TextView
        android:id="@+id/addNewAdmintextView"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="136dp"
        android:gravity="center"
        android:text="@string/add_a_new_admin"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/newAdminLabelTextView"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAdmin" />

    <TextView
        android:id="@+id/addNewAdminPasswordTextView"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/add_new_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/newAdminPasswordLabelTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewAdmintextView" />

</androidx.constraintlayout.widget.ConstraintLayout>