<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisesActivity">

    <TextView
        android:id="@+id/exercises_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercises"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/exercises_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/exercises_title_textView"
        app:layout_constraintBottom_toTopOf="@+id/input_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/exercises_display_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_past_exercises_here"
            android:padding="16dp" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttons_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/exercise_name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="enter exercise"
            android:hint="@string/enter_exercise"
            android:inputType="text" />

        <EditText
            android:id="@+id/exercise_duration_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="enter duration in minutes"
            android:hint="@string/enter_duration_minutes"
            android:inputType="number"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="1"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:layout_weight="1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
