<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/welcomeAdmin_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_admin"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />


    <Button
        android:id="@+id/meals_button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:text="@string/meals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAdminName_textView" />

    <Button
        android:id="@+id/exercises_button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/exercise_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meals_button" />


    <Button
        android:id="@+id/admin_button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercises_button" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_button" />

    <TextView
        android:id="@+id/displayAdminName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/hello_adminname"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/welcomeAdmin_textView"
        tools:layout_editor_absoluteX="143dp" />


</androidx.constraintlayout.widget.ConstraintLayout>